--- a/themes/default/common/topmenu.html
+++ b/themes/default/common/topmenu.html
@@ -2,7 +2,7 @@
 
     <div class="title">David De Silva College <br/> Minuwangoda</div>
 
-    <div class="time">{{ date_now }} <br/> {{ time_now }}</div>
+    <div class="time">{{ date_now }} <br/> <div class="digital-clock">{{ time_now }}</div> </div>
 
     <div>
 
